# HXScanner

./: README.MD  main.py  output2025-10-12 15:36:55.753802.csv  pyproject.toml
y2021/: HXout.csv  NLP.py  OCRtest.py  alignment.py  alignment2.py  alignment3.py  alignment4.py  check_finder.py  deid.py  dicom.py  dicom1.py  dicom2.py  dicom3.py  experiment.py  hxscanner.py  imagedenoise.py  main.py  sorter.py  test.py  testclean1.py  testcleanpngs.py  working.py  working1.py  working1large.py  working2.py
y2022/: DicomScanner.py  DicomScannerCleaning.py  NewDicomScan.py  README.md  README.txt  requirements.txt
y2023/: main.py  output2023-11-12 22:40:12.116541.csv  requirements.txt
y2023/Dicomfiles/: README.MD
y2023/FastPath/: README.MD
y2023/TestAlgo/: REDACTED_Augusta1.txt
y2023/TestDicomfiles/: README.MD
y2023/logs/: README.MD
