[project]
name = "history-scanner-combined"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boxdetect>=1.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pydicom>=3.0.1",
    "pytesseract>=0.3.13",
]
